feat(friend): 친구 기능 전체 구현 및 Swagger 테스트 완료
- Friend 엔티티에 요청자(user) / 대상(friend) / 상태(status) 필드 구성
- FriendStatus Enum(PENDING, ACCEPTED) 추가
- FriendRepository 구현 (existsByUserIdAndFriendId, findAllByUserIdAndStatus 등)
- FriendService 구현
  - 친구 요청 (sendFriendRequest)
  - 친구 수락 (acceptFriend)
  - 친구 목록 조회 (DTO 변환으로 직렬화 오류 해결)
  - 친구 삭제 (deleteFriend)
  - 친구 검색 (searchFriends)
- FriendController 작성
  - /api/friends (POST, GET)
  - /api/friends/accept (PUT)
  - /api/friends/{friendId} (DELETE)
  - /api/friends/search (GET)
- FriendListResponse / FriendSearchResponse DTO 분리
  - 목록용: isFriend 제외
  - 검색용: isFriend 포함
- Swagger 그룹 friend 등록 및 모든 엔드포인트 정상 반영
- data.sql에 테스트용 유저 더미데이터(3명) 추가
- Swagger UI에서 전체 API 호출(요청→수락→조회→삭제→검색) 테스트 완료 (200 OK)